# calculator

./: CMakeLists.txt  calculator.ui  calculatorMainWindow.h  main.cpp
